src/test/resources/semantic/reject/wrongFunctionCallParameterType3.ul
void main() {
    foo(4.6, "c", "true", 6);
}

void foo(float one, char two, boolean three, int four) {
}
